"Passes" disappear in "Render Layers" node in compositor #94812

Closed
opened 2022-01-11 12:01:02 +01:00 by Marcin Twarowski · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: 922ae55a16
Worked: 3.0

Short description of error
I connected Render Layer to Alpha Over node in compositor:
obraz.png
After reopening of the file, "Passes" (Image, Alpha) of that node are not there:
obraz.png
Exact steps for others to reproduce the error

  • Open attached file
    compositor_bug.blend
  • Notice that Passes are missing.
  • Pick a scene from the dropdown menu.
    obraz.png
  • Passes are back.
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: `922ae55a16` Worked: 3.0 **Short description of error** I connected Render Layer to Alpha Over node in compositor: ![obraz.png](https://archive.blender.org/developer/F12800760/obraz.png) After reopening of the file, "Passes" (Image, Alpha) of that node are not there: ![obraz.png](https://archive.blender.org/developer/F12800762/obraz.png) **Exact steps for others to reproduce the error** - Open attached file [compositor_bug.blend](https://archive.blender.org/developer/F12800764/compositor_bug.blend) - Notice that Passes are missing. - Pick a scene from the dropdown menu. ![obraz.png](https://archive.blender.org/developer/F12800765/obraz.png) - Passes are back.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

#94480 was marked as duplicate of this issue

#94480 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Looking into this, I found three issues (the first of which seems to be the main problem here):

  • cmp_node_rlayer_create_outputs_cb is using G_MAIN, but that is not set correctly yet when the file is not done loading yet.
  • The render layer node makes very unconventional use of node->storage. It only allocates node->storage while the node is being updated.
  • It seems like cmp_node_rlayers_update could update other nodes as well. Or at least it iterates over all compositor node trees in cmp_node_rlayer_create_outputs_cb.
Looking into this, I found three issues (the first of which seems to be the main problem here): * `cmp_node_rlayer_create_outputs_cb` is using `G_MAIN`, but that is not set correctly yet when the file is not done loading yet. * The render layer node makes very unconventional use of `node->storage`. It only allocates `node->storage` while the node is being updated. * It seems like `cmp_node_rlayers_update` could update other nodes as well. Or at least it iterates over all compositor node trees in `cmp_node_rlayer_create_outputs_cb`.

This issue was referenced by 145f1d1e0a

This issue was referenced by 145f1d1e0a59c1de311a0511e05541563296d879
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-01-12 11:08:45 +01:00

Added subscribers: @Alaska, @dfelinto

Added subscribers: @Alaska, @dfelinto
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94812
No description provided.